fix overflow style

--- a/nowwa.io/frontend/src/components/ChatContent/ChatContent.module.sass
+++ b/nowwa.io/frontend/src/components/ChatContent/ChatContent.module.sass
@@ -1,3 +1,5 @@
+@import ../../styles/helpers
+
 .container
     display: flex
     flex-direction: column
@@ -5,5 +7,5 @@
     height: 100vh
     margin-bottom: 20px
     margin-top: 20px
-    overflow-y: auto
     position: relative
+    +myscroll
