--- a/nowwa.io/frontend/src/components/ChatSetting/ChatSetting.module.sass
+++ b/nowwa.io/frontend/src/components/ChatSetting/ChatSetting.module.sass
@@ -2,7 +2,7 @@
     display: flex
     flex-direction: column
     padding: 66px 16px
-    overflow-y: scroll
+    overflow-y: auto
     height: inherit
 
     &__title
