--- a/nowwa.io/frontend/src/components/MessageList/MessageList.module.sass
+++ b/nowwa.io/frontend/src/components/MessageList/MessageList.module.sass
@@ -1,24 +1,14 @@
+@import ../../styles/helpers
 
 .container
     height: 100%
     display: flex
     flex-direction: column
     justify-content: space-between
+    +myscroll
 
     &__friendList
         flex-grow: 1
-        overflow-y: scroll !important
+        overflow-y: auto !important
 
-    ::-webkit-scrollbar
-        width: 0
-        height: 0
-        background: transparent
-
-    ::-webkit-scrollbar-thumb
-        background: #181c25
-        width: 0px
-        height: 0px
-
-    &:hover
-        ::-webkit-scrollbar
-            width: 9px
+    
