--- a/nowwa.io/frontend/src/screens/Chat/NewRoom/my.module.sass
+++ b/nowwa.io/frontend/src/screens/Chat/NewRoom/my.module.sass
@@ -24,7 +24,7 @@
         display: flex  
         flex-direction: column
         height: 300px
-        overflow-y: scroll
+        overflow-y: auto
 
         &__item 
             display: flex 
