--- a/nowwa.io/frontend/src/screens/Wallet/Wallet.module.sass
+++ b/nowwa.io/frontend/src/screens/Wallet/Wallet.module.sass
@@ -77,6 +77,7 @@
         margin-bottom: 40px
         +t 
             width: 100%
+        +myscroll
 
         &__tabs
             display: flex
@@ -98,7 +99,7 @@
             display: flex  
             flex-direction: column
             height: 245px
-            overflow-y: scroll
+            overflow-y: auto
 
             &__item 
                 display: flex 
